--- a/root/src/index.ejs
+++ b/root/src/index.ejs
@@ -18,7 +18,8 @@
           "react": "https://unpkg.com/react@17.0.2/umd/react.development.js",
           "react-dom": "https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js",
           "@henrique1204/root-config": "//localhost:9000/henrique1204-root-config.js",
-          "@henrique1204/cms": "//localhost:3001/index.js"
+          "@henrique1204/cms": "//localhost:3001/index.js",
+          "@henrique1204/cms-utility": "//localhost:3002/index.js"
         }
       }
     </script>
